Agregar soporte para autenticación y revocación de tokens JWT, implementar limitación de tasa en los endpoints de autenticación y actualizar pruebas unitarias.